# movies-api

./: .env.template  .gitignore  .gitingnore  CLAUDE.md  Dockerfile  README.md  blocked.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  migrate_stats.py  pyproject.toml  seed_test_data.py  test_premium_flow.py  test_premium_interactive.py
app/: admin.py  bot.py  config.py  constants.py  main.py  myshows.py  rate_limit.py  settings_cache.py  stats.py  tasks.py  templates.py  utils.py
app/api/: auth.py  dependencies.py  devices.py  episodes.py  myshows_sync.py  plugin_settings.py  profiles.py  sessions.py  telegram.py  tg_miniapp.py  timecodes.py
app/db/: models.py
lampa-plugins/: myshows.js  np.js  np_profiles.js
lampac/: np.js  numparser.js  nuprapser_cached.js
migrations/: migrate_episodes.py
nginx/: numparser.conf
scripts/: install-movies-api.sh  install.sh  movies-api.service  uninstall-movies-api.sh
static/css/: main.css
static/js/: card_detail.js  catalog.js  history.js  profiles.js  stats.js
templates/: _admin_links.html  actor.html  admin_dashboard.html  admin_settings.html  base.html  card_detail.html  catalog.html  catalog_category.html  forgot_password.html  index.html  profile_key_once.html  profiles.html  sessions.html  stats_dashboard.html  stats_login.html  tg_miniapp.html
